Fixing the jumping

--- a/stylesheets/trial.css
+++ b/stylesheets/trial.css
@@ -59,7 +59,7 @@ h3:hover {
 }
 
 .content {
-  padding: 16px;
+  padding: 30px;
 }
 
 .sticky {
